--- a/src/app/Turn/verTurnos.html
+++ b/src/app/Turn/verTurnos.html
@@ -1,17 +1,17 @@
 <div class="w-full h-screen bg-gray-200 flex">
     <sidebar></sidebar>
-    <div class="flex flex-col mx-6 mt-2 h-screen w-full flex-wrap"*ngIf="turnosCliente.length>0;else solicitarTurno">
+    <div class="flex flex-col mx-6 mt-2 h-screen w-full flex-wrap"*ngIf="turnsClient.length>0;else requestTurn">
         <p class="text-center font-serif text-cyan-800 text-2xl border-b border-black ">Turnos asignados</p>
-        <div class="flex flex-col gap-x-2 w-1/4 flex-wrap mt-4 p-4 rounded-lg bg-slate-100" *ngFor="let turno of turnosCliente">
+        <div class="flex flex-col gap-x-2 w-1/4 flex-wrap mt-4 p-4 rounded-lg bg-slate-100" *ngFor="let turn of turnsClient">
             <div >
-                <p class="text-cyan-800 text-xl font-serif">Barbero: {{turno.nombre_barbero}}</p>
-                <p class="text-cyan-800 text-xl font-serif">Hora: {{turno.hora}}</p>
-                <p class="text-cyan-800 text-xl font-serif">Dia: {{turno.dia}}</p>
+                <p class="text-cyan-800 text-xl font-serif">Barbero: {{turn.nameBarber}}</p>
+                <p class="text-cyan-800 text-xl font-serif">Hora: {{turn.hour}}</p>
+                <p class="text-cyan-800 text-xl font-serif">Dia: {{turn.day}}</p>
             </div>
-            <button  class="self-center mt-2 text-gray-200 rounded-full p-2 bg-cyan-600 hover:bg-cyan-800" (click)="cancelarTurno(turno.id_turno)">Cancelar</button>
+            <button  class="self-center mt-2 text-gray-200 rounded-full p-2 bg-cyan-600 hover:bg-cyan-800" (click)="cancelTurn(turn.idTurno)">Cancelar</button>
         </div>
     </div>
-    <ng-template #solicitarTurno>
+    <ng-template #requestTurn>
         <div class="flex flex-col ml-4 mt-2 gap-y-4">
             <p class="text-center font-serif text-cyan-800 text-2xl w-fit h-fit border-b border-black ">No se encontraron turnos</p>
             <a class="self-center mt-2 text-gray-200 rounded-full p-2 bg-cyan-600 hover:bg-cyan-800 cursor-pointer" [routerLink]="['/solicitarTurno']">Solicitar Turno </a>
